Update 'ezxopvogf-dotnet-basic' component image to: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:165244e63b36a8be0dda2abe62561306a3471a50@sha256:aae57489e1ed7ec614105d39e43cd5cb9b6fe8806773fc6112bc3887834c3cc1

--- a/components/ezxopvogf-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/ezxopvogf-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: ezxopvogf-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:165244e63b36a8be0dda2abe62561306a3471a50@sha256:aae57489e1ed7ec614105d39e43cd5cb9b6fe8806773fc6112bc3887834c3cc1
+          name: container-image
